<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">KISS launcher</string>
    <string name="activity_setting">KISS settings</string>
    <string name="ui_search_hint">Search apps, contacts, …</string>
    <string name="ui_item_search">Search %1$s for “%2$s”</string>
    <string name="ui_item_visit">Visit “%1$s”</string>
    <string name="ui_item_phone">Call “%s”</string>
    <string name="ui_item_open">Open “%1$s”</string>
    <string name="ui_item_timer">Start timer for %1$s</string>
    <string name="ui_item_contact_hint_message">Message</string>
    <string name="ui_item_contact_hint_call">Call</string>
    <string name="title_ui">User interface</string>
    <string name="title_history">History</string>
    <string name="title_providers">Search</string>
    <string name="title_import_export">Import &amp; export</string>
    <string name="title_advanced">Advanced</string>
    <string name="menu_settings">Device settings…</string>
    <string name="ui_empty_1">Start searching for anything</string>
    <string name="ui_empty_1_sub">Apps, contacts, settings, …</string>
    <string name="ui_empty_2">Always see your history</string>
    <string name="ui_empty_2_sub">For fast access</string>
    <string name="ui_empty_3">Quick access to most used apps</string>
    <string name="ui_empty_3_sub">KISS launcher learns from your habits</string>
    <string name="contacts_name">Contacts</string>
    <string name="contacts_call_on_click">Click to call contacts</string>
    <string name="search_results_options">Search results</string>
    <string name="search_name">Web search providers</string>
    <string name="search_provider_toggle">Links to web search providers</string>
    <string name="settings_name">Device settings</string>
    <string name="shortcuts_name">Shortcuts</string>
    <string name="timer_name">Start timer</string>
    <string name="timer_description">Examples: 5m, 1h 30m, 45s</string>
    <string name="stub_application" translatable="false">App name</string>
    <string name="stub_contact" translatable="false">Contact name</string>
    <string name="stub_contact_nickname" translatable="false">Nickname</string>
    <string name="stub_contact_phone" translatable="false">+1 330 1234 5678</string>
    <string name="stub_setting" translatable="false">Setting name</string>
    <string name="stub_phone" translatable="false">Call +1 330 1234 5678</string>
    <string name="stub_app_tag" translatable="false">Tag example</string>
    <string name="main_menu">Menu</string>
    <string name="main_clear">Clear search bar</string>
    <string name="main_kiss">Display app list</string>
    <string name="main_kiss_back">Display history</string>
    <string name="reset_name">Reset history</string>
    <string name="reset_excluded_apps_name">Reset list of apps excluded from KISS</string>
    <string name="reset_excluded_apps_warn">Do you really want to reset your excluded app list?</string>
    <string name="reset_excluded_from_history_apps_name">Reset list of apps excluded from history</string>
    <string name="reset_excluded_from_history_apps_warn">Do you really want to reset your excluded from history app list?</string>
    <string name="reset_excluded_app_shortcuts_name">Reset list of apps excluded from showing shortcuts</string>
    <string name="reset_excluded_app_shortcuts_warn">Do you really want to reset your list of apps excluded from showing shortcuts?</string>
    <string name="settings_excluded_apps">Excluded entries</string>
    <string name="ui_excluded_apps">View or edit apps excluded from KISS</string>
    <string name="ui_excluded_from_history_apps">View or edit apps excluded from history</string>
    <string name="ui_excluded_from_shortcuts_apps">View or edit apps excluded from showing shortcuts</string>
    <string name="ui_excluded_apps_dialog_title">Select apps to exclude</string>
    <string name="reset_warn">Do you really want to reset your history?</string>
    <string name="reset_favorites_name">Reset your list of favorites</string>
    <string name="reset_favorites_warn">Do you really want to reset your favorites?</string>
    <string name="keyboard_name">Display keyboard on start</string>
    <string name="keyboard_suggestions">Enable autocomplete/suggestions</string>
    <string name="keyboard_hide">Hide keyboard when clicking on desktop</string>
    <string name="history_hide_desc">Hide history and intro screen, turn on widgets</string>
    <string name="history_hide_name">Minimalistic UI</string>
    <string name="history_onclick_name">Show history on touch</string>
    <string name="history_onkeyboard_name">Show history with keyboard</string>
    <string name="history_onkeyboard_desc">Show history when software keyboard is visible</string>
    <string name="portrait_title">Force portrait mode</string>
    <string name="lwp_touch">Send touch events to wallpaper</string>
    <string name="lwp_drag">Emulate drag event for wallpaper</string>
    <string name="lwp_drag_desc">Send multiple touch events</string>
    <string name="wp_drag_animate">Scroll wallpaper</string>
    <string name="wp_drag_animate_desc">Drag ← → to scroll wallpaper</string>
    <string name="wp_animate_center">Center wallpaper</string>
    <string name="wp_animate_center_desc">The wallpaper will return to center after scrolling</string>
    <string name="wp_animate_sides">Side stick wallpaper</string>
    <string name="wp_animate_sides_desc">The wallpaper will stick to the left or right after scrolling</string>
    <string name="icons_hide_main">Hide icons</string>
    <string name="icons_hide_desc">Useful on slow devices</string>
    <string name="search_providers_title">Select web search providers</string>
    <string name="regenerate_shortcuts">Regenerate all app shortcuts</string>
    <string name="search_providers_delete">Delete web search providers</string>
    <string name="custom_search_provider">Add web search provider</string>
    <string name="search_provider_reset">Reset web search providers</string>
    <string name="search_provider_default">Default web search provider on enter</string>
    <string name="search_provider_reset_desc">Would you like to reset the list of search providers?</string>
    <string name="regenerate_shortcuts_desc">Would you like to regenerate the list of shortcuts?</string>
    <string name="regenerate_shortcuts_done">Shortcuts have been regenerated</string>
    <string name="search_provider_reset_done_desc">The search providers have been reset</string>
    <string name="search_provider_name">Provider name</string>
    <string name="search_provider_url" translatable="false">https://p.com/?q=%s</string>
    <string name="search_provider_added">The search provider was added.</string>
    <string name="search_provider_deleted">The search provider(s) was deleted.</string>
    <string name="search_provider_error_char">Please, do not use the character |</string>
    <string name="search_provider_error_placeholder">Please, use %s for the query placeholder</string>
    <string name="search_provider_error_url">Please, use a valid URL</string>
    <string name="search_provider_error_uri_cannot_be_handle">URI provided cannot be handle by any application in your device.</string>
    <string name="search_provider_error_exists">A provider with this name already exists</string>
    <string name="history_mode_name">History mode</string>
    <string name="history_mode_desc">Select how history should be sorted</string>
    <string name="root_mode_desc">If available use it to hibernate apps</string>
    <string name="root_mode_name">Root mode</string>
    <string name="root_mode_error">Unable to gain root privileges.</string>
    <string name="freeze_history_name">Freeze history</string>
    <string name="freeze_history_warn">Are you sure you want to freeze history and turn off further updates? Your history will not change anymore.</string>
    <string name="icons_pack_name">Icon pack (ADW.Launcher theme)</string>
    <string name="icons_pack_default_name">System icons</string>
    <string name="alias_phone">dial,call,phone</string>
    <string name="alias_contacts">contacts,people,relations</string>
    <string name="alias_web">Internet,web,browser</string>
    <string name="alias_mail">mail,email,e-mail</string>
    <string name="alias_market">market,store,app center</string>
    <string name="alias_clock">clock,alarm,timer,stopwatch</string>
    <string name="alias_messaging">text message,compose,SMS,MMS,messaging</string>
    <string name="settings_prefix">"Setting: "</string>
    <string name="settings_airplane">Airplane mode</string>
    <string name="settings_device_info">Device info</string>
    <string name="settings_applications">Apps</string>
    <string name="settings_connectivity">Connectivity</string>
    <string name="settings_battery">Battery</string>
    <string name="settings_nfc">NFC</string>
    <string name="settings_tethering">Tethering</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_dev">Developer settings</string>
    <string name="settings_accessibility">Accessibility</string>
    <string name="settings_sound">Sound and volume</string>
    <string name="settings_display">Display</string>
    <string name="menu_wallpaper">Update wallpaper…</string>
    <string name="application_not_found">Whoops… unable to launch that app.</string>
    <string name="shared_text_empty">Whoops… text is actually empty.</string>
    <string name="history_erased">History erased.</string>
    <string name="favorites_erased">Favorites erased.</string>
    <string name="menu_favorites_add">Add to favorites</string>
    <string name="menu_tags_edit">Add or edit tags</string>
    <string name="menu_app_rename">Rename</string>
    <string name="menu_custom_icon">Custom icon</string>
    <string name="tags_add_title">Add space separated tags</string>
    <string name="app_rename_title">Custom name</string>
    <string name="tags_confirmation_added">Tags set</string>
    <string name="app_rename_confirmation">App name is now %s</string>
    <string name="tags_visible">Show tags</string>
    <string name="excluded_app_list_erased">List of excluded apps erased.</string>
    <string name="excluded_app_list_added">App excluded from KISS. Reset through the KISS settings</string>
    <string name="excluded_app_history_added">App excluded from history. Reset through the KISS settings</string>
    <string name="removed_item">Removed</string>
    <string name="menu_remove">Remove from history</string>
    <string name="menu_exclude">Exclude app …</string>
    <string name="menu_exclude_kiss">from KISS</string>
    <string name="menu_exclude_history">from history</string>
    <string name="menu_app_details">App info</string>
    <string name="menu_app_store">View in store</string>
    <string name="menu_app_uninstall">Uninstall</string>
    <string name="menu_app_hibernate">Hibernate</string>
    <string name="menu_shortcut_remove">Remove shortcut</string>
    <string name="menu_shortcut_pin">Pin shortcut</string>
    <string name="toast_hibernate_completed">%s hibernated, relaunch to awake.</string>
    <string name="toast_hibernate_error">%s not hibernated.</string>
    <string name="menu_contact_copy_phone">Copy phone number</string>
    <string name="theme_name">Theme</string>
    <string name="color_transparent_dark">Transparently dark</string>
    <string name="color_transparent_white">Transparently white</string>
    <string name="color_transparent">Transparent</string>
    <string name="color_system">Colors of System</string>
    <string name="menu_widget_add">Add widget</string>
    <string name="custom_icon_hint">Filter by name</string>
    <string name="default_icon">default icon</string>
    <string name="custom_icon_preview">Preview</string>
    <string name="menu_private_space">Private Space</string>
</resources>