<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fr.neamar.kiss.ui.ExtendedRecyclerView
            android:id="@+id/colors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:columnWidth="@dimen/color_swatch_small"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            tools:itemCount="12"
            tools:listitem="@layout/color_picker_swatch" />

        <Button
            android:id="@+id/colorTransparentDark"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_transparent_dark"
            android:textColor="?android:attr/textColorSecondary"/>

        <Button
            android:id="@+id/colorTransparentWhite"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_transparent_white"
            android:textColor="?android:attr/textColorSecondary"/>

        <Button
            android:id="@+id/colorTransparent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_transparent"
            android:textColor="?android:attr/textColorSecondary" />

        <Button
            android:id="@+id/colorSystem"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_system"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>
</ScrollView>
