<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="@dimen/list_margin_horizontal"
    android:layout_marginLeft="@dimen/list_margin_horizontal"
    android:layout_marginEnd="@dimen/list_margin_horizontal"
    android:layout_marginRight="@dimen/list_margin_horizontal"
    android:background="?attr/listBackgroundColor"
    android:elevation="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ResultItemIcon"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_search"
            app:tint="?attr/resultColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="?attr/resultShadowColor"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/ui_empty_1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?attr/resultColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="?attr/resultShadowColor"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/ui_empty_1_sub"
                android:textColor="?android:attr/textColorTertiary" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@null"
        android:src="?attr/dividerDrawable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ResultItemIcon"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/zerostate_burger"
            app:tint="?attr/resultColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="?attr/resultShadowColor"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/ui_empty_2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?attr/resultColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="?attr/resultShadowColor"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/ui_empty_2_sub"
                android:textColor="?android:attr/textColorTertiary" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@null"
        android:src="?attr/dividerDrawable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ResultItemIcon"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher_white"
            app:tint="?attr/resultColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="?attr/resultShadowColor"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/ui_empty_3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?attr/resultColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="?attr/resultShadowColor"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/ui_empty_3_sub"
                android:textColor="?android:attr/textColorTertiary" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
