<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ResultItem"
    tools:layout_height="@dimen/result_height"
    android:orientation="horizontal">

    <fr.neamar.kiss.ui.ImprovedQuickContactBadge
        android:id="@+id/item_contact_icon"
        style="@style/ResultItemIcon"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_contact"
        tools:ignore="ContentDescription,UnusedAttribute"
        tools:layout_height="@dimen/result_icon_size"
        tools:layout_width="@dimen/result_icon_size" />

    <ImageView
        android:id="@+id/item_app_icon"
        android:layout_width="?attr/resultSubIconSize"
        android:layout_height="?attr/resultSubIconSize"
        android:layout_alignEnd="@id/item_contact_icon"
        android:layout_alignRight="@id/item_contact_icon"
        android:layout_alignBottom="@id/item_contact_icon"
        android:layout_gravity="end|bottom"
        android:contentDescription="@null"
        tools:layout_height="@dimen/result_subicon_size"
        tools:layout_width="@dimen/result_subicon_size"
        tools:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/item_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/item_contact_action_message"
        android:layout_toLeftOf="@+id/item_contact_action_message"
        android:layout_toEndOf="@id/item_contact_icon"
        android:layout_toRightOf="@id/item_contact_icon"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:shadowColor="?attr/resultShadowColor"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="?attr/textShadowRadius"
        android:singleLine="true"
        android:textColor="?attr/resultColor"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="?attr/resultTitleSize"
        tools:textSize="@dimen/result_title_size"
        tools:ignore="RtlSymmetry,UnusedAttribute"
        tools:text="@string/stub_contact" />

    <TextView
        android:id="@+id/item_contact_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_contact_name"
        android:layout_alignStart="@id/item_contact_name"
        android:layout_alignLeft="@id/item_contact_name"
        android:importantForAccessibility="no"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:shadowColor="?attr/resultShadowColor"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="?attr/textShadowRadius"
        android:textColor="?android:attr/textColorSecondary"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="?attr/resultSubtitleSize"
        tools:textSize="@dimen/result_subtitle_size"
        tools:ignore="RtlSymmetry,UnusedAttribute"
        tools:text="@string/stub_contact_phone" />

    <TextView
        android:id="@+id/item_contact_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_contact_name"
        android:layout_alignBaseline="@id/item_contact_phone"
        android:layout_alignEnd="@+id/item_contact_name"
        android:layout_alignRight="@+id/item_contact_name"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/item_contact_phone"
        android:layout_toRightOf="@+id/item_contact_phone"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:shadowColor="?attr/resultShadowColor"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="?attr/textShadowRadius"
        android:singleLine="true"
        android:textColor="?android:attr/textColorSecondary"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="?attr/resultSubtitleSize"
        tools:textSize="@dimen/result_subtitle_size"
        tools:ignore="RtlSymmetry,UnusedAttribute"
        tools:text="@string/stub_contact_nickname" />

    <ImageButton
        android:id="@+id/item_contact_action_message"
        android:layout_width="48dp"
        android:layout_height="?attr/resultButtonHeight"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/item_contact_action_phone"
        android:layout_toLeftOf="@+id/item_contact_action_phone"
        android:background="?attr/appSelectableItemBackground"
        android:contentDescription="@string/ui_item_contact_hint_message"
        android:src="@drawable/ic_message" />

    <ImageButton
        android:id="@+id/item_contact_action_phone"
        android:layout_width="48dp"
        android:layout_height="?attr/resultButtonHeight"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="?attr/appSelectableItemBackground"
        android:contentDescription="@string/ui_item_contact_hint_call"
        android:src="@drawable/ic_phone" />

</RelativeLayout>
