<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp"
    android:theme="@style/AppTheme">

    <!-- 58dp = icon_width + 2 * margin_horizontal -->
    <fr.neamar.kiss.ui.ExtendedRecyclerView
        android:id="@+id/iconView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnWidth="58dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="4"
        tools:itemCount="20"
        tools:listitem="@layout/custom_icon_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="application,text"
            android:hint="@string/custom_icon_hint"
            android:inputType="textAutoCorrect" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/icon_margin_right"
            android:text="@string/custom_icon_preview" />

        <ImageView
            android:id="@+id/preview"
            android:layout_width="@dimen/result_icon_size"
            android:layout_height="@dimen/result_icon_size"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/icon_margin_left"
            android:layout_marginEnd="@dimen/icon_margin_right"
            android:contentDescription="@null"
            tools:src="@drawable/ic_launcher_white" />

        <TextView
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:breakStrategy="simple"
            android:ellipsize="end"
            android:hyphenationFrequency="none"
            android:maxLines="2"
            tools:text="@string/app_name"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@android:id/button3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/icon_margin_left"
            android:layout_marginEnd="@dimen/icon_margin_right"
            android:layout_weight="1"
            android:text="@string/default_icon"
            android:textAllCaps="false" />

        <Button
            android:id="@android:id/button2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/icon_margin_left"
            android:layout_marginEnd="@dimen/icon_margin_right"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@android:id/button1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/icon_margin_left"
            android:layout_marginEnd="@dimen/icon_margin_right"
            android:layout_weight="1"
            android:text="@android:string/ok"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>